<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_route"
            android:icon="@drawable/route"
            android:title="@string/route" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/location"
            android:title="@string/locations" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_helper"
            android:icon="@drawable/helper"
            android:title="@string/helper" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/about" />
    </group>
</menu>