<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".help.HelpFragment">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="45dp"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnCentreCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_help_button"
                android:drawableStart="@drawable/ic_phone_res"
                android:text="@string/call_tourism_centre"
                android:textColor="#E4D9F6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnCentreEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_help_button"
                android:drawableStart="@drawable/ic_email_res"
                android:text="@string/email_tourism_centre"
                android:textColor="#E4D9F6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnCentreMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_help_button"
                android:drawableStart="@drawable/ic_map_res"
                android:text="@string/find_tourism_centre"
                android:textColor="#E4D9F6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnCreatorEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_help_button"
                android:drawableStart="@drawable/ic_email_res"
                android:text="@string/email_app_creator"
                android:textColor="#E4D9F6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnUniEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_help_button"
                android:drawableStart="@drawable/ic_email_res"
                android:text="@string/email_creators_university"
                android:textColor="#E4D9F6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnUniMap"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_help_button"
                android:drawableStart="@drawable/ic_map_res"
                android:text="@string/find_creators_university"
                android:textColor="#E4D9F6" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>